--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,12 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #2f2222;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #110829;
+    --background: #0f0a1c;
     --foreground: #ededed;
   }
 }
@@ -24,44 +24,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
-.circle-container {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  border: 2px solid black; /* Add border to the circle container */
-  border-radius: 50%;
-  top: 10px;
-  padding-top: 10px;
-}
-
-.circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-color: red;
-}
-
-.items-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  height: 100%;
-}
-
-.item {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  background-color: green;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 30px;
-  color: white;
 }
