--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+.text1 {
+  transition: transform 0.5s ease, opacity 0.5s ease;
+}
+
+
 body {
   color: var(--foreground);
   background: var(--background);
